--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "buefy": "^0.7.1",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
